Refactoring: Changed class names and files names for a better understanding. Removed flex from the path for each file.

--- a/notebooks/Federate datasets from other libraries with FLEXible.ipynb
+++ b/notebooks/Federate datasets from other libraries with FLEXible.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataObject\n",
-    "from flex.data import FlexDataDistribution\n",
-    "from flex.data import FlexDatasetConfig"
+    "from flex.data import Dataset\n",
+    "from flex.data import FedDataDistribution\n",
+    "from flex.data import FedDatasetConfig"
    ]
   },
   {
@@ -40,7 +40,7 @@
     "# HuggingFace\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# Load a dataset into a FlexDataObject\n",
+    "# Load a dataset into a Dataset\n",
     "dataset_hf = load_dataset('ag_news', split='train')"
    ]
   },
@@ -57,19 +57,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_hf = FlexDataObject.from_huggingface_dataset(\n",
+    "fcd_hf = Dataset.from_huggingface_dataset(\n",
     "    dataset_hf, X_columns=\"text\", label_columns=\"label\"\n",
     ")\n",
     "\n",
     "# Create a config and federate the dataset\n",
-    "config_hf = FlexDatasetConfig(\n",
+    "config_hf = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
     "\n",
-    "flex_dataset_two_step_hf = FlexDataDistribution.from_config(\n",
+    "flex_dataset_two_step_hf = FedDataDistribution.from_config(\n",
     "    cdata=fcd_hf, config=config_hf\n",
     ")\n",
     "print(f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf['client_0'].X_data[0]}\")"
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly, only using a config.\n",
-    "flex_dataset_hf = FlexDataDistribution.from_config_with_huggingface_dataset(\n",
+    "flex_dataset_hf = FedDataDistribution.from_config_with_huggingface_dataset(\n",
     "    dataset_hf, config_hf, \"text\", \"label\"\n",
     ")\n",
     "\n",
@@ -133,17 +133,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_tf = FlexDataObject.from_tfds_dataset(mnist)\n",
+    "fcd_tf = Dataset.from_tfds_dataset(mnist)\n",
     "\n",
-    "config_tf = FlexDatasetConfig(\n",
+    "config_tf = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
     "\n",
-    "# Federate the FlexDataObject we just created\n",
-    "flex_dataset_two_step_tf = FlexDataDistribution.from_config(\n",
+    "# Federate the Dataset we just created\n",
+    "flex_dataset_two_step_tf = FedDataDistribution.from_config(\n",
     "    cdata=fcd_tf,\n",
     "    config=config_tf\n",
     ")\n",
@@ -169,7 +169,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly\n",
-    "flex_dataset_tf = FlexDataDistribution.from_config_with_tfds_dataset(\n",
+    "flex_dataset_tf = FedDataDistribution.from_config_with_tfds_dataset(\n",
     "    mnist,\n",
     "    config_tf\n",
     ")\n",
@@ -215,16 +215,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_torch = FlexDataObject.from_torchvision_dataset(cifar10)\n",
+    "fcd_torch = Dataset.from_torchvision_dataset(cifar10)\n",
     "\n",
-    "config_torch = FlexDatasetConfig(\n",
+    "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
-    "# Federate the FlexDataObject we just created\n",
-    "flex_dataset_two_step_torch = FlexDataDistribution.from_config(\n",
+    "# Federate the Dataset we just created\n",
+    "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
     "    cdata=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
@@ -250,7 +250,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly\n",
-    "flex_dataset_torch = FlexDataDistribution.from_config_with_torchvision_dataset(\n",
+    "flex_dataset_torch = FedDataDistribution.from_config_with_torchvision_dataset(\n",
     "    cifar10,\n",
     "    config_tf\n",
     ")\n",
@@ -293,17 +293,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_torch = FlexDataObject.from_torchtext_dataset(torch_dataset)\n",
+    "fcd_torch = Dataset.from_torchtext_dataset(torch_dataset)\n",
     "\n",
     "# We will use the same configuration than in the HuggingFace example\n",
-    "config_torch = FlexDatasetConfig(\n",
+    "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
-    "# Federate the FlexDataObject we just created\n",
-    "flex_dataset_two_step_torch = FlexDataDistribution.from_config(\n",
+    "# Federate the Dataset we just created\n",
+    "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
     "    cdata=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
@@ -325,7 +325,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly\n",
-    "flex_dataset_torch = FlexDataDistribution.from_config_with_torchtext_dataset(\n",
+    "flex_dataset_torch = FedDataDistribution.from_config_with_torchtext_dataset(\n",
     "    torch_dataset,\n",
     "    config_torch\n",
     ")\n",
@@ -337,7 +337,7 @@
    "metadata": {},
    "source": [
     "### END\n",
-    "Congratulations, now you know how to federate a dataset using the *FlexDataDistribution* and the *FlexDatasetConfig* classes, so you can setup multiple experimental settings that fit most your hipothesis."
+    "Congratulations, now you know how to federate a dataset using the *FedDataDistribution* and the *FedDatasetConfig* classes, so you can setup multiple experimental settings that fit most your hipothesis."
    ]
   }
  ],
