--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -43,12 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution, FlexDataObject\n",
+    "from flex.data import FedDataDistribution, Dataset\n",
     "\n",
-    "train_iris = FlexDataObject(X_train, y_train)\n",
-    "test_iris = FlexDataObject(X_test, y_test)\n",
+    "train_iris = Dataset(X_train, y_train)\n",
+    "test_iris = Dataset(X_test, y_test)\n",
     "\n",
-    "federated_iris = FlexDataDistribution.iid_distribution(train_iris, n_clients=5)"
+    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(client_flex_model: FlexModel, client_data: FlexDataObject):\n",
+    "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    client_flex_model.model.fit(client_data.X_data)\n",
     "\n",
     "clients.map(train)"
