--- a/notebooks/Federating a linear regression model.ipynb
+++ b/notebooks/Federating a linear regression model.ipynb
@@ -46,12 +46,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution, FlexDataObject\n",
+    "from flex.data import FedDataDistribution, Dataset\n",
     "\n",
-    "train_diabetes = FlexDataObject(X_train, y_train)\n",
-    "test_diabetes = FlexDataObject(X_test, y_test)\n",
+    "train_diabetes = Dataset(X_train, y_train)\n",
+    "test_diabetes = Dataset(X_test, y_test)\n",
     "\n",
-    "federated_diabetes = FlexDataDistribution.iid_distribution(train_diabetes, n_clients=5)"
+    "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_clients=5)"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(client_flex_model: FlexModel, client_data: FlexDataObject):\n",
+    "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    client_flex_model.model.fit(client_data.X_data, client_data.y_data)\n",
     "\n",
     "clients.map(train)"
