--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to use our tools, we need to encapsulate the dataset in a `FlexDataObject`. \n",
+    "In order to use our tools, we need to encapsulate the dataset in a `Dataset`. \n",
     "\n",
     "Note that train_X and train_y are assumed to be NumPy arrays and train_y must be a one dimensional NumPy array."
    ]
@@ -43,19 +43,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataObject\n",
+    "from flex.data import Dataset\n",
     "\n",
-    "train_dataset = FlexDataObject.from_tfds_dataset(ds_train)\n",
-    "test_dataset = FlexDataObject.from_tfds_dataset(ds_test)"
+    "train_dataset = Dataset.from_tfds_dataset(ds_train)\n",
+    "test_dataset = Dataset.from_tfds_dataset(ds_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To federate a centralized dataset, it is required to describe the federation process in a `FlexDatasetConfig` object.\n",
+    "To federate a centralized dataset, it is required to describe the federation process in a `FedDatasetConfig` object.\n",
     "\n",
-    "A `FlexDatasetConfig` object has the following fields:\n",
+    "A `FedDatasetConfig` object has the following fields:\n",
     "\n",
     "\n",
     "- **seed**: Optional[int]\n",
@@ -101,10 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDatasetConfig\n",
+    "from flex.data import FedDatasetConfig\n",
     "import numpy as np\n",
     "\n",
-    "config = FlexDatasetConfig(seed = 0) # We fix a seed to make our federation reproducible\n",
+    "config = FedDatasetConfig(seed = 0) # We fix a seed to make our federation reproducible\n",
     "config.n_clients = 10 # 10 clients\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.classes_per_client = np.unique(train_dataset.y_data) # assign each client one class\n",
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We apply the generated `FlexDatasetConfig` to a `FlexDataObject`, which encapsulates the centralized dataset."
+    "We apply the generated `FedDatasetConfig` to a `Dataset`, which encapsulates the centralized dataset."
    ]
   },
   {
@@ -124,9 +124,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution\n",
+    "from flex.data import FedDataDistribution\n",
     "\n",
-    "federated_dataset = FlexDataDistribution.from_config(cdata=train_dataset, config=config)"
+    "federated_dataset = FedDataDistribution.from_config(cdata=train_dataset, config=config)"
    ]
   },
   {
@@ -188,13 +188,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = FlexDatasetConfig(seed=0, \n",
+    "config = FedDatasetConfig(seed=0, \n",
     "                            n_clients=n_clients,\n",
     "                            replacement=False,\n",
     "                            weights=normal_weights\n",
     "                        )\n",
     "\n",
-    "normal_federated_dataset = FlexDataDistribution.from_config(cdata=train_dataset, config=config)"
+    "normal_federated_dataset = FedDataDistribution.from_config(cdata=train_dataset, config=config)"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) We download the cifar10 dataset using torchivision and create a FlexDataObject with it using ``from_torchvision_dataset``. Note that, it is mandatory to at least provide the ``ToTensor`` transform."
+    "1) We download the cifar10 dataset using torchivision and create a Dataset with it using ``from_torchvision_dataset``. Note that, it is mandatory to at least provide the ``ToTensor`` transform."
    ]
   },
   {
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "from torchvision import datasets, transforms\n",
-    "from flex.data import FlexDataObject\n",
+    "from flex.data import Dataset\n",
     "\n",
     "cifar10 = datasets.CIFAR10(\n",
     "        root=\".\",\n",
@@ -255,14 +255,14 @@
     "        download=True,\n",
     "        transform=transforms.ToTensor()\n",
     ")\n",
-    "cifar10_dataset = FlexDataObject.from_torchvision_dataset(cifar10)"
+    "cifar10_dataset = Dataset.from_torchvision_dataset(cifar10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Create a ``FlexDatasetConfig`` that fits the description given above."
+    "2) Create a ``FedDatasetConfig`` that fits the description given above."
    ]
   },
   {
@@ -271,11 +271,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDatasetConfig\n",
+    "from flex.data import FedDatasetConfig\n",
     "import numpy as np\n",
     "\n",
     "# Sample two/ten classes for each client\n",
-    "config = FlexDatasetConfig(seed=0)\n",
+    "config = FedDatasetConfig(seed=0)\n",
     "config.classes_per_client = (2, 10)\n",
     "config.replacement = True # it is not clear whether clients share their data or not\n",
     "config.n_clients = 10\n",
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Create the federated dataset by applying the created ``FlexDatasetConfig`` to a ``FlexDataObject`` using ``FlexDataDistribution.from_config``"
+    "3) Create the federated dataset by applying the created ``FedDatasetConfig`` to a ``Dataset`` using ``FedDataDistribution.from_config``"
    ]
   },
   {
@@ -300,9 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution\n",
+    "from flex.data import FedDataDistribution\n",
     "\n",
-    "personalized_cifar_dataset = FlexDataDistribution.from_config(cdata=cifar10_dataset, config=config)"
+    "personalized_cifar_dataset = FedDataDistribution.from_config(cdata=cifar10_dataset, config=config)"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "source": [
     "\n",
     "\n",
-    "If we want, we can normalize the dataset of each client easily, using the `map` function from `FlexDataset`, for example we force each client to keep only pair labels:"
+    "If we want, we can normalize the dataset of each client easily, using the `map` function from `FedDataset`, for example we force each client to keep only pair labels:"
    ]
   },
   {
@@ -350,12 +350,12 @@
     "import numpy as np\n",
     "\n",
     "rng = np.random.default_rng(seed=0)\n",
-    "def keep_given_labels(client_dataset: FlexDataObject, selected_labels=None):\n",
+    "def keep_given_labels(client_dataset: Dataset, selected_labels=None):\n",
     "    if not selected_labels:\n",
     "        selected_labels = []\n",
     "    X_data = client_dataset.X_data[np.isin(client_dataset.y_data, selected_labels)]\n",
     "    y_data = client_dataset.y_data[np.isin(client_dataset.y_data, selected_labels)]\n",
-    "    return FlexDataObject(X_data=X_data, y_data=y_data)\n",
+    "    return Dataset(X_data=X_data, y_data=y_data)\n",
     "\n",
     "randomly_transformed_federated_dataset = personalized_cifar_dataset.map(func=keep_given_labels,  # function to apply\n",
     "                                                num_proc=1,\n",
@@ -394,9 +394,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataObject\n",
-    "from flex.data import FlexDataDistribution\n",
-    "from flex.data import FlexDatasetConfig"
+    "from flex.data import Dataset\n",
+    "from flex.data import FedDataDistribution\n",
+    "from flex.data import FedDatasetConfig"
    ]
   },
   {
@@ -415,7 +415,7 @@
     "# HuggingFace\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# Load a dataset into a FlexDataObject\n",
+    "# Load a dataset into a Dataset\n",
     "dataset_hf = load_dataset('ag_news', split='train')"
    ]
   },
@@ -432,19 +432,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_hf = FlexDataObject.from_huggingface_dataset(\n",
+    "fcd_hf = Dataset.from_huggingface_dataset(\n",
     "    dataset_hf, X_columns=\"text\", label_columns=\"label\"\n",
     ")\n",
     "\n",
     "# Create a config and federate the dataset\n",
-    "config_hf = FlexDatasetConfig(\n",
+    "config_hf = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
     "\n",
-    "flex_dataset_two_step_hf = FlexDataDistribution.from_config(\n",
+    "flex_dataset_two_step_hf = FedDataDistribution.from_config(\n",
     "    cdata=fcd_hf, config=config_hf\n",
     ")\n",
     "print(f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf['client_0'].X_data[0]}\")"
@@ -464,7 +464,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly, only using a config.\n",
-    "flex_dataset_hf = FlexDataDistribution.from_config_with_huggingface_dataset(\n",
+    "flex_dataset_hf = FedDataDistribution.from_config_with_huggingface_dataset(\n",
     "    dataset_hf, config_hf, \"text\", \"label\"\n",
     ")\n",
     "\n",
@@ -508,17 +508,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_tf = FlexDataObject.from_tfds_dataset(mnist)\n",
+    "fcd_tf = Dataset.from_tfds_dataset(mnist)\n",
     "\n",
-    "config_tf = FlexDatasetConfig(\n",
+    "config_tf = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
     "\n",
-    "# Federate the FlexDataObject we just created\n",
-    "flex_dataset_two_step_tf = FlexDataDistribution.from_config(\n",
+    "# Federate the Dataset we just created\n",
+    "flex_dataset_two_step_tf = FedDataDistribution.from_config(\n",
     "    cdata=fcd_tf,\n",
     "    config=config_tf\n",
     ")\n",
@@ -544,7 +544,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly\n",
-    "flex_dataset_tf = FlexDataDistribution.from_config_with_tfds_dataset(\n",
+    "flex_dataset_tf = FedDataDistribution.from_config_with_tfds_dataset(\n",
     "    mnist,\n",
     "    config_tf\n",
     ")\n",
@@ -590,16 +590,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_torch = FlexDataObject.from_torchvision_dataset(cifar10)\n",
+    "fcd_torch = Dataset.from_torchvision_dataset(cifar10)\n",
     "\n",
-    "config_torch = FlexDatasetConfig(\n",
+    "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
-    "# Federate the FlexDataObject we just created\n",
-    "flex_dataset_two_step_torch = FlexDataDistribution.from_config(\n",
+    "# Federate the Dataset we just created\n",
+    "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
     "    cdata=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
@@ -623,7 +623,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly\n",
-    "flex_dataset_torch = FlexDataDistribution.from_config_with_torchvision_dataset(\n",
+    "flex_dataset_torch = FedDataDistribution.from_config_with_torchvision_dataset(\n",
     "    cifar10,\n",
     "    config_tf\n",
     ")\n",
@@ -664,17 +664,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_torch = FlexDataObject.from_torchtext_dataset(torch_dataset)\n",
+    "fcd_torch = Dataset.from_torchtext_dataset(torch_dataset)\n",
     "\n",
     "# We will use the same configuration than in the HuggingFace example\n",
-    "config_torch = FlexDatasetConfig(\n",
+    "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
     "    n_clients=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
-    "# Federate the FlexDataObject we just created\n",
-    "flex_dataset_two_step_torch = FlexDataDistribution.from_config(\n",
+    "# Federate the Dataset we just created\n",
+    "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
     "    cdata=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
@@ -696,7 +696,7 @@
    "outputs": [],
    "source": [
     "# Federate the dataset directly\n",
-    "flex_dataset_torch = FlexDataDistribution.from_config_with_torchtext_dataset(\n",
+    "flex_dataset_torch = FedDataDistribution.from_config_with_torchtext_dataset(\n",
     "    torch_dataset,\n",
     "    config_torch\n",
     ")\n",
@@ -708,7 +708,7 @@
    "metadata": {},
    "source": [
     "### END\n",
-    "Congratulations, now you know how to federate a dataset using the *FlexDataDistribution* and the *FlexDatasetConfig* classes, so you can setup multiple experimental settings that fit most your hipothesis."
+    "Congratulations, now you know how to federate a dataset using the *FedDataDistribution* and the *FedDatasetConfig* classes, so you can setup multiple experimental settings that fit most your hipothesis."
    ]
   }
  ],
