--- a/notebooks/flex_text_classification_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_torch_demo.ipynb
@@ -110,8 +110,8 @@
    "metadata": {},
    "source": [
     "# 1) From centralized data to federated data\n",
-    "Firstly and foremost, we need to encapsulare our centralized dataset as numpy arrays in a FlexDataObject, to split it for every federated client.\n",
-    "As we are using a centrilized dataset, we have to federate it. To federate the data we need to create a basic data object for FLEXible that is called **FlexDataObject**. To create a  **FlexDataObject** we need to have the data as *numpy.arrays*."
+    "Firstly and foremost, we need to encapsulare our centralized dataset as numpy arrays in a Dataset, to split it for every federated client.\n",
+    "As we are using a centrilized dataset, we have to federate it. To federate the data we need to create a basic data object for FLEXible that is called **Dataset**. To create a  **Dataset** we need to have the data as *numpy.arrays*."
    ]
   },
   {
@@ -120,16 +120,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataObject\n",
+    "from flex.data import Dataset\n",
     "\n",
-    "flex_data = FlexDataObject(X_data=train_examples, y_data=train_labels)"
+    "flex_data = Dataset(X_data=train_examples, y_data=train_labels)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to federate our dataset, we need to specify how we want to split it among clients in a ``FlexDatasetConfig`` object. For this case we want to split it evenly between 2 clients, that is, an iid distribution. To apply our config to our centralized dataset, we use ``FlexDataDistribution.from_config``. A more complete description of the configuration options of ``FlexDatasetConfig`` to federate a dataset can be found in the documentation."
+    "In order to federate our dataset, we need to specify how we want to split it among clients in a ``FedDatasetConfig`` object. For this case we want to split it evenly between 2 clients, that is, an iid distribution. To apply our config to our centralized dataset, we use ``FedDataDistribution.from_config``. A more complete description of the configuration options of ``FedDatasetConfig`` to federate a dataset can be found in the documentation."
    ]
   },
   {
@@ -138,20 +138,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDatasetConfig, FlexDataDistribution\n",
+    "from flex.data import FedDatasetConfig, FedDataDistribution\n",
     "\n",
-    "config = FlexDatasetConfig(seed=0)\n",
+    "config = FedDatasetConfig(seed=0)\n",
     "config.n_clients = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.client_names = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FlexDataDistribution.from_config(cdata=flex_data, config=config)"
+    "flex_dataset = FedDataDistribution.from_config(cdata=flex_data, config=config)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, there is a shortcut, if we want to split the dataset iid between the clients we can directly use ``FlexDataDistribution.iid_distribution`` with the number of clients and our centralized data stored in a ``FlexDataObject``. Note that in this case the name of the clients are generated automatically: client number ``i`` gets id: ``f\"client_{i}\"``."
+    "However, there is a shortcut, if we want to split the dataset iid between the clients we can directly use ``FedDataDistribution.iid_distribution`` with the number of clients and our centralized data stored in a ``Dataset``. Note that in this case the name of the clients are generated automatically: client number ``i`` gets id: ``f\"client_{i}\"``."
    ]
   },
   {
@@ -160,9 +160,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution\n",
+    "from flex.data import FedDataDistribution\n",
     "\n",
-    "flex_dataset = FlexDataDistribution.iid_distribution(flex_data, n_clients=2)"
+    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_clients=2)"
    ]
   },
   {
