--- a/notebooks/flex_text_generation_torch_demo.ipynb
+++ b/notebooks/flex_text_generation_torch_demo.ipynb
@@ -31,7 +31,7 @@
     "from torch import nn, optim\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "\n",
-    "from flex.data import FlexDataset, FlexDataObject, FlexDatasetConfig, FlexDataDistribution\n",
+    "from flex.data import FedDataset, Dataset, FedDatasetConfig, FedDataDistribution\n",
     "from flex.pool import FlexPool\n",
     "\n",
     "from utils import print_function, add_torch_dataset_to_client"
@@ -190,7 +190,7 @@
    "metadata": {},
    "source": [
     "--------------------------------------------------\n",
-    "Stop until bug in FlexDataDistribution.from_cofig() it's solved. \n",
+    "Stop until bug in FedDataDistribution.from_cofig() it's solved. \n",
     "\n",
     "Bug: Can't federate if the array has only one feature\n",
     "\n",
@@ -210,22 +210,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdata = FlexDataObject(X)\n",
-    "config = FlexDatasetConfig(seed=0)\n",
+    "cdata = Dataset(X)\n",
+    "config = FedDatasetConfig(seed=0)\n",
     "config.n_clients = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.client_names = ['client1', 'client2']\n",
     "# config.weights = [0.2] * config.n_clients # each client has only 20% of its assigned class\n",
     "config.weights = None\n",
-    "fld = FlexDataDistribution.from_config(cdata=cdata, config=config)\n",
-    "#fld = FlexDataDistribution.iid_distribution(cdata=cdata)"
+    "fld = FedDataDistribution.from_config(cdata=cdata, config=config)\n",
+    "#fld = FedDataDistribution.iid_distribution(cdata=cdata)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make each client have the Dataset, we have to use the map function from the FlexDataset class. With the map function, we will make the client have a Dataset internally, so we can train the model for each client with it's own data. \n",
+    "To make each client have the Dataset, we have to use the map function from the FedDataset class. With the map function, we will make the client have a Dataset internally, so we can train the model for each client with it's own data. \n",
     "\n",
     "The map function recieve a function to apply to each client, so now we create the function that we want to apply."
    ]
@@ -242,10 +242,10 @@
     "    it should be changed for less memory usage.\n",
     "\n",
     "    Args:\n",
-    "        client (FlexDataObject): Client to create a TextDataset\n",
+    "        client (Dataset): Client to create a TextDataset\n",
     "\n",
     "    Returns:\n",
-    "        FlexDataObject: Client with a TextDataset in her data\n",
+    "        Dataset: Client with a TextDataset in her data\n",
     "    \"\"\"\n",
     "    new_client = deepcopy(client)\n",
     "    new_client_dataset = TextDataset(new_client.X_data, kwargs['tokenizer'], \n",
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_federated_dataset = FlexDataset({\n",
+    "new_federated_dataset = FedDataset({\n",
     "    client: add_torch_dataset_to_client(fld[client], tokenizer=tokenizer, itos=vocab.get_itos(),\n",
     "                                stoi=vocab.get_stoi(), sequence_len=100) \n",
     "    for client in fld\n",
@@ -358,7 +358,7 @@
    "metadata": {},
    "source": [
     "Now we have created a pool of actors that is composed of:\n",
-    "- Clients: The clients have the client-role and can access the data of the FlexDataset if they have the same ID.\n",
+    "- Clients: The clients have the client-role and can access the data of the FedDataset if they have the same ID.\n",
     "- Server-aggregator: The client-server architecture adds a new actor that has the role of the server, so it can orchestate the training phase, and the aggregator, so it can aggregate the weights.\n",
     "\n",
     "The pool of actors has some communication restrictions, as indicated in the documentation, so to make it easy to understand how the pool works, we can separate actors in different pools based on the role. In our case, we can get two subpools, one with the clients, and one with the server (that also acts as aggregator)."
