--- a/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
@@ -41,15 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution, FlexDataObject\n",
+    "from flex.data import FedDataDistribution, Dataset\n",
     "import numpy as np\n",
     "\n",
-    "flex_dataset, test_data =  FlexDataDistribution.FederatedEMNIST(return_test=True)\n",
+    "flex_dataset, test_data =  FedDataDistribution.FederatedEMNIST(return_test=True)\n",
     "\n",
-    "def remove_writer_from_y_data(client_dataset: FlexDataObject):\n",
+    "def remove_writer_from_y_data(client_dataset: Dataset):\n",
     "    new_x_data = client_dataset.X_data\n",
     "    new_y_data = np.asarray([y[0] for y in client_dataset.y_data])  # each label is a tuple (mnist_label, writer), so we remove the writer\n",
-    "    return FlexDataObject(new_x_data, new_y_data)\n",
+    "    return Dataset(new_x_data, new_y_data)\n",
     "\n",
     "flex_dataset = flex_dataset.map(remove_writer_from_y_data)\n"
    ]
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataObject\n",
+    "from flex.data import Dataset\n",
     "\n",
     "test_examples, test_labels = test_data.X_data, test_data.y_data"
    ]
