--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -37,9 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataObject\n",
+    "from flex.data import Dataset\n",
     "\n",
-    "flex_data = FlexDataObject.from_tfds_dataset(train_data)"
+    "flex_data = Dataset.from_tfds_dataset(train_data)"
    ]
   },
   {
@@ -48,13 +48,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDatasetConfig, FlexDataDistribution\n",
+    "from flex.data import FedDatasetConfig, FedDataDistribution\n",
     "\n",
-    "config = FlexDatasetConfig(seed=0)\n",
+    "config = FedDatasetConfig(seed=0)\n",
     "config.n_clients = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.client_names = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FlexDataDistribution.from_config(cdata=flex_data, config=config)"
+    "flex_dataset = FedDataDistribution.from_config(cdata=flex_data, config=config)"
    ]
   },
   {
@@ -63,9 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution\n",
+    "from flex.data import FedDataDistribution\n",
     "\n",
-    "flex_dataset = FlexDataDistribution.iid_distribution(flex_data, n_clients=2)"
+    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_clients=2)"
    ]
   },
   {
